# Cipher_Identifier

./: .gitignore  Cargo.toml  README.md
cipher_identifier/: Cargo.toml
cipher_identifier/src/: identify_cipher.rs
cipher_identifier/src/statistical_tests/: edi.rs  rod.rs  shannon_entropy.rs
resources/: cipher_types.json
src/: benchmark.rs  cipher_analyzer.rs
src/models/: cipher_type.rs
src/statistical_tests/: binary_random.rs  dic.rs  ioc.rs  ldi.rs  lr.rs  mka.rs  mod.rs  utils.rs
