[package]
name = "cipher_identifier"
version = "0.2.0"
edition = "2024"
license='MIT'
description = "A tool for identifying classical ciphers based on statistical analysis"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
prettytable-rs = "0.10"
regex = "1.9"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"
